--- a/gc-jdbc/事务隔离.md
+++ b/gc-jdbc/事务隔离.md
@@ -43,4 +43,75 @@
 
 建议你总是使用set autocommit=1, 通过显式语句的方式来启动事务。
 
+## 锁
+InnoDB 实现了两种类型的锁机制：共享锁（S）和排他锁（X）。
+
+共享锁允许一个事务读数据，不允许修改数据，如果其他事务要再对该行加锁，只能加共享锁；
+
+排他锁是修改数据时加的锁，可以读取和修改数据，一旦一个事务对该行数据加锁，其他事务将不能再对该数据加任务锁。
+
+## InnoDB 是如何实现原子性、一致性和持久性的吗？
+binlog + redo log 两阶段提交保证**持久性**
+
+事务的回滚机制 保证**原子性** 要么全部提交成功 要么回滚
+
+undo log + MVCC 保证**一致性** 事务开始和结束的过程不会其它事务看到 为了并发可以适当破坏一致性
+
+### 1、Mysql怎么保证一致性的？
+
+OK，这个问题分为两个层面来说。
+
+**从数据库层面**，数据库通过原子性、隔离性、持久性来保证一致性。也就是说ACID四大特性之中，C(一致性)是目的，A(原子性)、I(隔离性)、D(持久性)是手段，是为了保证一致性，数据库提供的手段。数据库必须要实现AID三大特性，才有可能实现一致性。例如，原子性无法保证，显然一致性也无法保证。
+
+但是，如果你在事务里故意写出违反约束的代码，一致性还是无法保证的。例如，你在转账的例子中，你的代码里故意不给B账户加钱，那一致性还是无法保证。因此，还必须从应用层角度考虑。
+
+**从应用层面**，通过代码判断数据库数据是否有效，然后决定回滚还是提交数据！
+
+### 2、Mysql怎么保证原子性的？
+
+OK，是利用Innodb的undo log。
+
+undo log名为**回滚日志**，是实现原子性的关键，当事务回滚时能够撤销所有已经成功执行的sql语句，他需要记录你要回滚的相应日志信息。
+
+例如
+
+(1)当你delete一条数据的时候，就需要记录这条数据的信息，回滚的时候，insert这条旧数据
+
+(2)当你update一条数据的时候，就需要记录之前的旧值，回滚的时候，根据旧值执行update操作
+
+(3)当年insert一条数据的时候，就需要这条记录的主键，回滚的时候，根据主键执行delete操
+
+undo log记录了这些回滚需要的信息，当事务执行失败或调用了rollback，导致事务需要回滚，便可以利用undo log中的信息将数据回滚到修改之前的样子。
+
+ps:具体的undo log日志长啥样，这个可以写一篇文章了。而且写出来，看的人也不多，姑且先这么简单的理解吧。
+
+### 3、Mysql怎么保证持久性的？
+    
+OK，是利用Innodb的redo log。
+
+正如之前说的，Mysql是先把磁盘上的数据加载到内存中，在内存中对数据进行修改，再刷回磁盘上。如果此时突然宕机，内存中的数据就会丢失。
+
+怎么解决这个问题？
+
+简单啊，**事务提交前直接把数据写入磁盘**就行啊。
+
+这么做有什么问题？
+
+只修改一个页面里的一个字节，就要将整个页面刷入磁盘，太浪费资源了。毕竟一个页面16kb大小，你只改其中一点点东西，就要将16kb的内容刷入磁盘，听着也不合理。
+
+毕竟一个事务里的SQL可能牵涉到多个数据页的修改，而这些数据页可能不是相邻的，也就是属于随机IO。显然操作随机IO，速度会比较慢。
+
+于是，决定采用redo log解决上面的问题。**当做数据修改的时候，不仅在内存中操作，还会在redo log中记录这次操作** 。当事务提交的时候，会将redo log日志进行刷盘(redo log一部分在内存中，一部分在磁盘上)。当数据库宕机重启的时候，会将redo log中的内容恢复到数据库中，再根据undo log和binlog内容决定回滚数据还是提交数据。
+
+## 解决死锁的最佳方式当然就是预防死锁的发生了，我们平时编程中，可以通过以下一些常规手段来预防死锁的发生：
+* 1. 在编程中尽量按照固定的顺序来处理数据库记录，假设有两个更新操作，分别更新两条相同的记录，但更新顺序不一样，有可能导致死锁；
+* 2. 在允许幻读和不可重复读的情况下，尽量使用 RC 事务隔离级别，可以避免 gap lock 导致的死锁问题；
+* 3. 更新表时，尽量使用主键更新；
+* 4. 避免长事务，尽量将长事务拆解，可以降低与其它事务发生冲突的概率；
+* 5. 设置锁等待超时参数，我们可以通过 innodb_lock_wait_timeout 设置合理的等待超时阈值，特别是在一些高并发的业务中，我们可以尽量将该值设置得小一些，避免大量事务等待，占用系统资源，造成严重的性能开销。
+
+
+
+
+
  
