--- a/gc-rabbitmq/资料.md
+++ b/gc-rabbitmq/资料.md
@@ -1,2 +1,54 @@
 ## 学习地址
 https://blog.csdn.net/qq_35387940/article/details/100514134
+
+## 一个消息推送到接收的流程
+![](https://img-blog.csdnimg.cn/20190903141227300.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM1Mzg3OTQw,size_16,color_FFFFFF,t_70)
+
+对应的消息推送/接收模式有以下几种：
+
+**Direct Exchange**
+
+直连型交换机，根据消息携带的路由键将消息投递给对应队列。
+
+大致流程，有一个队列绑定到一个直连交换机上，同时赋予一个路由键 routing key 。
+然后当一个消息携带着路由值为X，这个消息通过生产者发送给交换机时，交换机就会根据这个路由值X去寻找绑定值也是X的队列。
+
+**Fanout Exchange**
+
+扇型交换机，这个交换机没有路由键概念，就算你绑了路由键也是无视的。 这个交换机在接收到消息后，会直接转发到绑定到它上面的所有队列。
+
+**Topic Exchange**
+
+主题交换机，这个交换机其实跟直连交换机流程差不多，但是它的特点就是在它的路由键和绑定键之间是有规则的。
+简单地介绍下规则：
+
+*  (* 星号) 用来表示一个单词 (必须出现的)
+
+*  (井号) 用来表示任意数量（零个或多个）单词
+
+通配的绑定键是跟队列进行绑定的，举个小例子
+队列Q1 绑定键为 *.TT.*          队列Q2绑定键为  TT.#
+如果一条消息携带的路由键为 A.TT.B，那么队列Q1将会收到；
+如果一条消息携带的路由键为TT.AA.BB，那么队列Q2将会收到；
+
+
+###   消息接收的确认机制主要存在三种模式：
+
+①**自动确认**， 这也是默认的消息确认情况。  AcknowledgeMode.NONE
+RabbitMQ成功将消息发出（即将消息成功写入TCP Socket）中立即认为本次投递已经被正确处理，不管消费者端是否成功处理本次投递。
+所以这种情况如果消费端消费逻辑抛出异常，也就是消费端没有处理成功这条消息，那么就相当于丢失了消息。
+一般这种情况我们都是使用try catch捕捉异常后，打印日志用于追踪数据，这样找出对应数据再做后续处理。
+
+② 根据情况确认， 这个不做介绍
+
+③ **手动确认** ， 这个比较关键，也是我们配置接收消息确认机制时，多数选择的模式。
+消费者收到消息后，手动调用basic.ack/basic.nack/basic.reject后，RabbitMQ收到这些消息后，才认为本次投递成功。
+
+* basic.ack用于肯定确认
+* basic.nack用于否定确认（注意：这是AMQP 0-9-1的RabbitMQ扩展）
+* basic.reject用于否定确认，但与basic.nack相比有一个限制:一次只能拒绝单条消息
+
+消费者端以上的3个方法都表示消息已经被正确投递，但是basic.ack表示消息已经被正确处理。
+而basic.nack,basic.reject表示没有被正确处理：
+
+
