--- a/gc-document/项目介绍.md
+++ b/gc-document/项目介绍.md
@@ -9,7 +9,7 @@
 
 * **企业微信**
 
-统一处理企业微信的接口，涵盖网页授权、通讯录管理、客户联系、应用等业务操作。
+统一处理企业微信的接口，涵盖网页授权、通讯录管理、客户联系、应用、服务告警提示、商品营销等业务操作。
 
 * **监听器**
 
@@ -23,6 +23,10 @@
 
 向整个公司的开发团队提供微信、企业微信接口，并收集所有接口的调用情况。
 
+技术特点:
+
+kafka 实现系统解耦，减少系统的依赖；流量削峰 ,大量请求过来，分摊在其他时间处理，减少数据库处理压力
+
 * **企业微信后台**
 
 处理通讯录、客户联系、应用、素材、企业微信日志报表、企业微信回调等管理，供业务方、产品使用。
@@ -31,6 +35,19 @@
 
 具备公众号标签 小程序、二维码、素材、自动回复等管理功能，旨在帮产品、业务方宣传、推销公司产品。
 
+**核心亮点：**
+
+1、配置场景顾问二维码，根据不同场景实现不同欢迎语提示，基于不同场景二维码可以实现不同平台（央视、湖南卫视）的数据交互，
+每天晚上定时通过企业微信群展示顾问报表数据。
+
+    实现原理：
+     1、配置顾问二维码，同步到MySQL。
+     2、将顾问名单与场景丢到redis，如 (userId,cctv)。
+     3、数据交互的时候根据顾问名单从redis取出不同数据，看看是哪个场景，再进行数据交互。
+
+2、通过企业微信应用实现服务告警，可以知道系统报错、中间件等问题；
+
+3、java对接动态库（c语言）
 ## 运维平台
    
 * **数据管理**
