--- a/gc-document/简历.MD
+++ b/gc-document/简历.MD
@@ -1,95 +1,84 @@
-
-
 # 个人信息
-
-- 许国才/男/1993
+- 许国才
 - 本科/⼴东海洋⼤学/计算机科学与技术（2013-2017）
-- 工作年限：4年
-- 技术博客：https://blog.csdn.net/baidu_28068985
 - 期望职位：Java工程师
 - 期望城市：广州
+
 # 联系方式
 - 手机：18320438728
 - Email：1187976578@qq.com
 - 微信号：18320438728
 # 专业技能
-- 1、掌握java基础知识、Io、泛型、多线程、集合框架等，拥有丰富的系统设计分析能力及面向对象设计能力；
-- 2、对JVM原理有初步的理解，包括内存模型，垃圾回收机制，并具备问题排查能力；
-- 3、熟悉常⽤设计模式（观察、代理、单例模式等），具备UML图设计分析能力；
-- 4、熟悉spring-framework源码，熟悉 spring 的 ioc/aop 设计思想，掌握 spring bean 生命周期的全过程及其各个时期暴露出来的接口并能根据需要进行扩展；
-- 5、掌握springboot 、springmvc、spring、mybatis等框架的配置与应用，熟悉其核心源码并能在其基础上进行二次开发；
-- 6、熟练使用 Redis，掌握 Redis 的几种常用数据类型(string，list，hash，set，zset)的用途，具备高可用集群搭建、数据迁移等实战经验；熟悉 Redis 多级缓存的构建及缓存穿透、击穿、雪崩等一系列问题的解决方案；熟练使用 Redis 分布式锁、冷热备份；
-- 7、熟练使用 MySQL，掌握 MySQL 服务的搭建，熟悉 sql 优化技巧、Mycat 主从配置与分库分表；
-- 8、熟练使用分布式一致性协调中间件 Zookeeper，掌握 zk cluster 的搭建，熟悉 zk 过半机制、leader 选举过程；
-- 9、掌握Kafka原理、集群配置，有过实际高可用集群搭建和业务开发经历；
-- 10、掌握Linux系统的常⽤命令，并能在Linux环境下使用top、jstack、jps、ps等命令调优；
-- 11、掌握apollo原理及核心源码，具备Apollo搭建、使用及二次开发能力；
-- 12、熟悉微服务开发过程，掌握springcloud、dubbo分布式架构，拥有spring cloud、dubbo的实战经验；
--  13、熟悉前端 vue.js 、JavaScript技术，能在vue脚⼿架下进⾏开发；；
+- 1、掌握java基础知识、Io、泛型、多线程、集合框架等;
+- 2、掌握Linux系统的常⽤命令，熟悉JVM调优，有过线上调优经验;
+- 3、掌握springboot 、springmvc、spring、mybatis等主流框架的基本原理及使用;
+- 4、熟悉Zookeeper、Kafka、redis、mongodb、Elasticsearch等中间件及nosql数据库;
+- 5、掌握MySQL基本用法及sql优化技巧、Mycat 主从配置与分库分表;
+- 6、熟悉微服务相关框架，掌握springcloud、dubbo分布式架构，拥有spring cloud、dubbo的实战经验;
+- 7、熟悉 vue.js 、JavaScript等前端技术开发，具有实战项目经验;
+- 8、具有Kubernetes、docker项目使用经验;
+- 9、熟悉Git原型与操作，掌握GitFlow工作流程
 
 # 工作经历
-* 2019年12⽉~至今 蓝月亮公司
-* 2017年12⽉~2019年10月 ⼴州弘度信息科技有限公司
-* 2017年4⽉~2017年11⽉ ⾼威电信(⼴州)有限公司
+* 2021年9月~至今  明略科技
+* 2019年12⽉~2021年9月 蓝月亮
+* 2017年4⽉~2019年10月 ⼴州弘度信息科技有限公司
 
 # 项目经验
-## 微零平台（蓝月亮）
-微零平台是集成微信、企业微信、小程序、QQ等SDK进行二次开发的项目，统一处理公司涉及微信相关业务的接口，并服务公司各个小组调用，统计的企业微信数据方便业务人员商品营销。中秋项目接口tps处理能力达到9000/s,50000并发时，请求成功率99.5%以上，响应时间5s以下。
+## 微伴系统
+ 微伴助手是基于微信、开放平台、企业微信开发的产品，企业微信私域流量运营神器。
 * 涉及技术：
-  Springboot、Spring、eureka、Zookeeper、TKmybatis、Kafka、Zuul、Dubbo、Redis等
-* 设计技术：
-  1、采用分布式的项目开发模式，整个项目分为：企业微信、微信公众号、小程序、统计、数据定时器、微信监听器等14个服务；
-  2、基于Kafka的高吞吐量这个特点，最大努力增加消息的发送及消费能力；
-  3、基于Redis消息中间件，缓存微信相关的授权信息及存储kafka发送失败的消息；
-  4、采用Eureka、Zookeeper作为注册中心，兼容springcloud、dubbo的服务；
+  Python、go、Java、python flask、SQLAlchemy、k8s
 * 贡献
-  主导管理后台开发，从需求分析、技术选型、开发到部署上线。上线后优化数据报表，给运营提供便捷方式获取他们所需的数据。还负责研究新的技术栈，并把新的技术栈融入项目；
+  基于微伴助手私有化二次开发、完成上下游埋点功能，维护现有系统，同时负责一下售前工作。参加TBDS、万象中台等培训，熟悉大数据相关组件。
+
+## 微灵平台（蓝月亮）
+微灵平台是围绕微信、企业微信、小程序、QQ等各种应用开发的平台，主要用来引流、商品营销、服务异常提醒，统一处理集团企业微信相关业务操作，
+开发对外接口供其他小组调用。涉及的微服务达14个，中秋项目接口平均达到3000tps，业务成功率达到96.4%。
+* 涉及技术:
+  Springboot、Spring、Zookeeper、TKmybatis、Kafka、Zuul、Dubbo、Redis等
+* 设计技术:
+  - 1、基于dubbo实现服务之间的通讯;
+  - 2、基于Kafka实现系统解耦、流量削峰;
+  - 3、基于Redis、mysql实现企业微信客户群双写一致性;
+  - 4、基于redis实现接口限流操作;
+* 贡献：
+  主导微灵平台开发，从需求分析、技术选型、开发到部署上线。上线后优化数据报表，给运营提供便捷方式获取他们所需的数据。还负责研究新的技术栈，并把新的技术栈融入项目；
 
 ## 智能运维平台（弘度）
-该平台主要⽤于监控⼴州市内数10万个视频设备（摄像机、存储器、编码器设备），定期巡检设备，统计设备好坏情况，并生成对应的工单，做好运维工作，形成自动化检测设备。
+弘度智能运维平台作为专业的第三方一站式综合运维平台，通过对全网视频设备、IT设备及平台系统软件等进行精确故障定位、自动化工单和运维考核，
+实现对视频系统及其基础支撑运行环境的可视、可控、可管理，持续提升视频系统的整体运行维护管理水平，保障视频监控系统长期稳定、完好运行。
 * 涉及技术：
-  Springboot、Spring、eureka、Zookeeper、mybatis-plus、Kafka、gateway、Redis等
+  Springboot、Spring、eureka、mybatis-plus、Kafka、gateway、Redis等
 * 设计技术
-  1、采用分布式的项目开发模式，整个项目分为：综合管理、诊断、工单、报表、监听器、通知公告、定时器、地图等12个服务；
-  2、采取swagger作为与前端交互的文档；
-  3、采用kafka的消息队列与第三方数据交互，同步第三方数据；
-  4、采用websocket作为视频流的数据传输方式；
-  5、使⽤docker技术部署应⽤；
-  6、前端使⽤vue技术，基于elementUI开发；
+  - 1、参与基于activity工作流实现的自动化工单开发;
+  - 2、采取swagger作为与前端交互的接口文档;
+  - 3、基于kafka实现与第三方数据交互、数据同步;
+  - 4、使⽤docker实现容器部署;
+  - 5、前端使⽤vue技术，基于elementUI开发;
 * 贡献
-  主导后台开发，参与需求分析、开发到部署上线。上线后优化数据报表;
+  参与自动化工单、资产设备管理、设备故障检测、数据同步、资产完好率统计等任务开发、需求分析、部署上线;
 
 ## 视频联⽹智能合成管理平台（弘度）
-该项⽬主要应⽤区域的安防视频系统处理，⽀持多⽹络、多协议、多设备资源接⼊，⽀持在线视频播放，实时监控区域安防情况。
+该平台应⽤安防视频领域，建立以视频图像为主、多种资源关联叠加的视频资源智能化服务体系。融合了视频联网、智能运维、安全管控3大业务数据，
+实现视频、手机、车辆等信息的整合和汇聚。
 * 涉及技术：
   Springboot、Spring、Zookeeper、mybatis-plus、gateway、Redis等
 
 * 设计技术
-  1、采用分布式的项目开发模式，整个项目分为：综合管理、报表、地图等5个服务；
-  2、采取swagger作为与前端交互的文档；
-  4、采用zookeeper、dubbo作为微服务架构；
-  5、前端使⽤vue技术，基于elementUI开发；
+  - 1、采用分布式的项目开发模式，整个项目分为：综合管理、报表、地图等5个服务；
+  - 2、采取swagger作为与前端交互的接口文档;
+  - 3、基于zookeeper、dubbo的技术作为微服务架构;
+  - 4、前端使⽤vue技术，基于elementUI开发;
 * 贡献
-  参与需求分析、后台开发到部署上线。参与前端小组开发，保证项目进度；
-
-## ⽆线⽹上⽹系统（高威）
-在公众场所提供⼿机上⽹的平台，收集⽤⼾的上⽹数据，统计⽤⼾上⽹时间。
-* ⼯作任务
-  1、维护公司现有项⽬，与客⼾沟通，及时处理客⼾遇到的问题；
-  2、参与报表模块开发；
-  3、负责跟进客⼾的需求，通过splunk⽇记管理器。分析项⽬输出的⽇记，统计⽤⼾上⽹时间；
-  4、基于POI技术独⾃完成报表的⽣成与导出开发；
-  5、参与系统的需求、设计、实施和部署等，编写模块⽂档，模块使⽤指南；
-  使⽤技术
-  1、基于bootstrap、 jQuery、JavaScript、HTML 、css技术；
-  2、后台使⽤的架构springmvc、Spring、Spring data jpa；
+  参与资产管理需求分析、后台开发到部署上线。协助前端小组开发，保证项目进度；
 
 # 自我评价
 * 积极主动，善于学习和接受新事物，具有团队合作精神。
 * 具有良好设计与代码品味，喜欢尝试新鲜技术。
 
 # 兴趣爱好
-长跑、徒步、羽毛球
+跑步、徒步、羽毛球
 
 ---      
 # 致谢
