--- a/gc-elasticsearch/问题集合.md
+++ b/gc-elasticsearch/问题集合.md
@@ -65,7 +65,7 @@
 
   有了倒排索引，就能实现 o（1）时间复杂度的效率检索文章了，极大的提高了检索效率。
   
-  ![](https://pic4.zhimg.com/80/v2-43542fcc0daf345b92c5a674c4197e8b_720w.jpg)
+  ![](./images/倒排索引示例.png)
   
   学术的解答方式：
   
@@ -137,7 +137,7 @@
 
    记住官方文档中的这个图。
    
-   ![](https://pic3.zhimg.com/80/v2-8b8eccec501800436783e3bfe2c8ad86_720w.jpg)
+   ![](./images/文档写入过程.png)
    
    第一步：客户写集群某节点写入数据，发送请求。（如果没有指定路由/协调节点，请求的节点扮演路由节点的角色。）
 
@@ -186,7 +186,7 @@
    
    面试官：想了解你的知识面的广度和深度。
    
-   ![](https://pic3.zhimg.com/80/v2-d4c024788023660e7a19c8981b5ce2fa_720w.jpg)
+   ![](./images/lucence%20内部结构.png)
    
    Lucene 是有**索引和搜索**的两个过程，包含索引创建，索引，搜索三个要点。可以基于这个脉络展开一些。
    
@@ -224,7 +224,7 @@
 
    4、flush 触发的时机是定时触发（默认 30 分钟）或者 translog 变得太大（默认为 512M）时；
    
-  ![](https://pic2.zhimg.com/80/v2-98fc4f1cd2b3c13e56dead5850e9db95_720w.jpg)
+  ![](./images/索引文档过程.png)
   
   补充：关于 Lucene 的 Segement：
 
@@ -260,7 +260,7 @@
    5、补充：Query Then Fetch 的搜索类型在文档相关性打分的时候参考的是本分片的数据，这样在文档数量较少的时候可能不够准确，DFS Query Then Fetch 增
    加了一个预查询的处理，询问 Term 和 Document frequency，这个评分更准确，但是性能会变差。
    
-   ![](https://pic2.zhimg.com/80/v2-aac5b983cb1aa9ec2c81e6624292e469_720w.jpg)
+   ![](./images/搜索过程2.png)
    
 ## 15、在 Elasticsearch 中，是怎么根据一个词找到对应的倒排索引的？
   （1）Lucene的索引过程，就是按照全文检索的基本过程，将倒排表写成此文件格式的过程。
@@ -341,7 +341,7 @@
   Marvel 让你可以很简单的通过 Kibana 监控 Elasticsearch。你可以实时查看你的集群健康状态和性能，也可以分析过去的集群、索引和节点指标。
   
 ## 21、介绍下你们电商搜索的整体技术架构。
-  ![](https://pic2.zhimg.com/80/v2-6ea22f379bab8d83f9e4697f19e75191_720w.jpg)
+  ![](./images/电商搜索架构.png)
   
 ## 22、介绍一下你们的个性化搜索方案？
    SEE 基于 word2vec 和 Elasticsearch 实现个性化搜索
@@ -354,7 +354,7 @@
 ## 23、是否了解字典树？
    常用字典数据结构如下所示：
    
-   ![](https://pic3.zhimg.com/80/v2-aa1a57bbbcbbf04ef089d6681d662ffe_720w.jpg)
+   ![](./images/字典结构.png)
    
    Trie 的核心思想是**空间换时间**，利用字符串的公共前缀来降低查询时间的开销以达到提高效率的目的。它有 3 个基本性质：
    
@@ -364,7 +364,7 @@
    
    3、每个节点的所有子节点包含的字符都不相同。
    
-   ![](https://pic3.zhimg.com/80/v2-df4c8cd2e2b1dad444a50bab3f6d9bb2_720w.jpg)
+   ![](./images/tire结构.png)
    
    1、可以看到，trie 树每一层的节点数是 26^i 级别的。所以为了节省空间，我们还可以用动态链表，或者用数组来模拟动态。而空间的花费，不会超过单词数×单词长度。
    
@@ -379,7 +379,7 @@
    如果最上方的字符等于最左方的字符，则为左上方的数字。否则为左上方的数字+1。（对于 3,3 来说为 0） 左方数字+1（对于 3,3 格来说为 2）上方数字+1（对于 3,3 格来说为 2）
    最终取右下角的值即为编辑距离的值 3。
    
-   ![](https://pic4.zhimg.com/80/v2-1f5084b94e47d417b3cebd615ef04647_720w.jpg)
+   ![](./images/纠错思路.png)
    
      对于拼写纠错，我们考虑构造一个度量空间（Metric Space），该空间内任何关
      
@@ -437,6 +437,6 @@
      
      cart 节点，这样就得到 cape 这个满足条件的结果。
      
-   ![](https://pic4.zhimg.com/80/v2-d5426155b3c3c0a7e49123954f96e347_720w.jpg)
+   ![](./images/纠错2.png)
    
    
