--- a/gc-redis/缓存穿透，缓存击穿，缓存雪崩原因+解决方案.md
+++ b/gc-redis/缓存穿透，缓存击穿，缓存雪崩原因+解决方案.md
@@ -82,11 +82,11 @@
    
    缓存正常从Redis中获取，示意图如下：
    
-   ![](https://mmbiz.qpic.cn/mmbiz_jpg/W5Wzice6Iz7gSqQ4UoogMtkSMWGWgynS8GtMu35osT9yED1ZE5CCjj0t5E7wPdU01zpMqc6rkYUiabID3YhFz1Lw/640?wx_fmt=jpeg&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+   ![](./images/redis取数.png)
    
    缓存失效瞬间示意图如下：
    
-   ![](https://mmbiz.qpic.cn/mmbiz_jpg/W5Wzice6Iz7gSqQ4UoogMtkSMWGWgynS8oQtvBSortCptOZwgeUyJ6a69Aib1GEVl6vLKwY7TyVWOJHBfNPyWSpg/640?wx_fmt=jpeg&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
+   ![](./images/redis缓存失效.png)
    
    缓存失效时的雪崩效应对底层系统的冲击非常可怕！大多数系统设计者考虑用加锁或者队列的方式保证来保证不会有大量的线程对数据库一次性进行读写，从而避免失效时大量的并发请求落到底层存储系统上。
    还有一个简单方案就时讲缓存失效时间分散开，比如我们可以在原有的失效时间基础上增加一个随机值，比如1-5分钟随机，这样每一个缓存的过期时间的重复率就会降低，就很难引发集体失效的事件。
