--- a/gc-document/面试经历.md
+++ b/gc-document/面试经历.md
@@ -25,3 +25,14 @@
 * 5、kafka leader选举过程
 * 6、10亿用户表(id name iphone email)如何分表？
 * 7、partitipn文件有哪些
+
+## 20220623 -- 信必优（汇丰项目组）
+* 英语自我介绍，英语交流环节
+* jvm调优，jvm原理（内存模型）
+* 重载重写区别
+* 抽象类与接口
+* String、StringBuffer、StringBuilder，为什么不使用String拼接
+* 什么是微服务
+* 如何设计微服务
+* 数据迁移
+* 分布式事务
