--- a/gc-document/面试经历.md
+++ b/gc-document/面试经历.md
@@ -30,10 +30,49 @@
 * 英语自我介绍，英语交流环节
 * jvm调优，jvm原理（内存模型）
 * 重载重写区别
-* 抽象类与接口
+* final 、finally、finalize
+* public 、private、protected、默认
+* 接口与抽象类的区别
 * 设计接口的安全性
 * String、StringBuffer、StringBuilder，为什么不使用String拼接
 * 什么是微服务
 * 如何设计微服务
 * 数据迁移
 * 分布式事务
+
+## 20220625 --区块链新科技
+* 字符与字符集
+* https 的加密解密过程
+* 登录账号的交互及存储过程
+* tkmybatis与mybatis的区别
+
+## 20220628 --- 开源中国
+* 创建线程几种方式
+* 死锁怎么处理、修复
+* 用过hashmap？怎么产生死锁的，怎么处理
+* synchronized 与lock的区别
+* 线程池的创建方式，有多少种，分别是什么
+* 你用过shell写过什么脚本
+* 说说jvm的结构，调优参数
+* aop的实现原理
+* 你看过spring源码，能说说它的过程
+* BeanDefinition有什么用
+* Spring 框架中都用到了哪些设计模式？
+* redis 是否有持久化，那种性能比较好？
+* kafka 推 及 拉模式，有什么不同点
+* kafka 的ack 方式，请说说
+* 怎么理解kafka分组
+* zookeeper在kafka集群中有哪些作用
+* 除了kafka，你还用过哪些队列，是否有事务
+* gitflow的工作流程
+* 你是否搭建过微服务，有哪些设计原则
+* 你知道的设计模式，有哪些？
+* 说说抽象工厂与简单工厂的区别
+* 你知道你lambda表达式有哪些，用过哪些表达式
+* Linux命令 awk 是什么，创建文件夹命令
+* 容器部署，docker是虚拟化技术么，镜像与容器有什么不同
+* 你们项目中k8s 容器，你负责哪些，有哪些常用命令，helm用过么
+* 你了解过devops么？
+* 你们有操作过敏捷开发么，是怎么操作的
+
+
