--- a/gc-document/面试经历.md
+++ b/gc-document/面试经历.md
@@ -75,4 +75,22 @@
 * 你了解过devops么？
 * 你们有操作过敏捷开发么，是怎么操作的
 
+## 20220704  -- 天翼数字生活
+* redis的淘汰策略
+* 限流方案，限流位置（网关）
+* 说说OOM内存泄漏例子
+* 容器部署跟宿主机部署有什么不同
+* dubbo默认的注册中心是什么，dubbo容器调用会怎么样
+* 技术选型上，怎么选择了Kafka
+* 说说你了解的非关系型数据库
+* 说说你redis可以存哪些数据
+
+
+## 20220704 -- 信华信
+* redis 的雪崩、穿透
+* mysql优化技巧\explain
+* exit 与 in的区别
+* mybatis 的标签表示（代码层 if  else if  else if,mybatis的标签表示）
+* 
+
 
