--- a/gc-document/面试经历.md
+++ b/gc-document/面试经历.md
@@ -91,6 +91,38 @@
 * mysql优化技巧\explain
 * exit 与 in的区别
 * mybatis 的标签表示（代码层 if  else if  else if,mybatis的标签表示）
-* 
+
+## 20220705 -- 领雁科技 （广发外包）
+* mysql优化技巧
+* JVM垃圾回收过程
+* hashmap 扩容过程，1.8 与 1.7有什么不同
+* StringBuilder 与 StringBuffer的区别
+* 创建线程方式
+* 线程池参数，线程池实现原理
+* threadLocal有什么用
+* 创建对象，除了new 之外还有哪些
+* redis的数据结构有哪些
+* redis 查询快的原因
+* redis的线程模型
+* Kafka 的ack 含义
+* kafka 数据丢失有哪些，解决方案
+* Kafka rebalance操作
+* Kafka 消费者属于push 还是 pull 模式
+
+## 20220707 -- 亦云信息
+* 谈谈mysql的一致性
+* 谈谈mysql mvcc
+* 谈谈mysql 的排序
+* 谈谈mysql 锁
+* 谈谈sql慢查询
+* 谈谈hashmap的数据结构，为什么使用哈希,为什么使用链表，什么使用红黑树
+* 谈谈数组有什么特点
+* 谈谈AQS
+* 谈谈死锁，怎么解决
+* 谈谈Kafka的数据丢失情况
+* 谈谈spring是如何加载参数变量的
+* 谈谈dubbo的架构
+* 谈谈mybatis是如何与spring结合一起用的，实现了哪些类
+
 
 
