--- a/gc-document/简历.MD
+++ b/gc-document/简历.MD
@@ -17,7 +17,8 @@
 - 6、熟悉微服务相关框架，掌握springcloud、dubbo分布式架构，拥有spring cloud、dubbo的实战经验;
 - 7、熟悉 vue.js 、JavaScript等前端技术开发，具有实战项目经验;
 - 8、具有Kubernetes、docker项目使用经验;
-- 9、熟悉Git原型与操作，掌握GitFlow工作流程
+- 9、熟悉Git原型与操作，掌握GitFlow工作流程;
+- 10、掌握CDH、TBDS平台的部署及组件维护;
 
 # 工作经历
 * 2021年9月~至今  明略科技
@@ -25,22 +26,31 @@
 * 2017年4⽉~2019年10月 ⼴州弘度信息科技有限公司
 
 # 项目经验
-## 微伴系统
- 微伴助手是基于微信、开放平台、企业微信开发的产品，企业微信私域流量运营神器。
+## 明智工作(明略)
+ 明智工作包含SCRM、客户数据平台、营销自动化、智能会话、标签中心等系统，旨在帮助企业重建数据、利用数据，达到以引流-营销为主体的目的，
+ 帮助企业提高获客能力、营销效率。同时也提高员工的办事效率，在最短的时间响应客户的需求。
 * 涉及技术：
-  Python、go、Java、python flask、SQLAlchemy、k8s
+  springboot、k8s、cdh、springcloud
+  
+* 设计技术
+  - 1、基于springcloud搭建的微服务平台
+  - 2、基于k8s容器的服务部署
+  - 3、基于CDH的组件管理与维护
+  
 * 贡献
-  基于微伴助手私有化二次开发、完成上下游埋点功能，维护现有系统，同时负责一下售前工作。参加TBDS、万象中台等培训，熟悉大数据相关组件。
+  基于明智工作私有化二次开发、完成上下游埋点功能，维护现有系统，同时负责一下售前工作。参加TBDS、万象中台等培训，
+  工作过程中负责CDH大数据平台搭建及组件维护，熟悉大数据相关组件。整理相关技术文档如cdh部署及使用、万象中台的部署及使用
 
 ## 微灵平台（蓝月亮）
-微灵平台是围绕微信、企业微信、小程序、QQ等各种应用开发的平台，主要用来引流、商品营销、服务异常提醒，统一处理集团企业微信相关业务操作，
-开发对外接口供其他小组调用。涉及的微服务达14个，中秋项目接口平均达到3000tps，业务成功率达到96.4%。
+微灵平台包含营销、智能分析、销售、服务、会话分析、应用中心、配置中心、标签中心等15个微服务，以营销-销售为主体，
+通过智能分析客户的会话、购买行为、引流数据来构建客户画像，分类管理不同的客户群，服务公司在各种节日的促销活动，进一步服务新老客户。
+支持大型活动如中秋活动，压测接口平均达到3000tps，业务成功率达到96.4%。
 * 涉及技术:
   Springboot、Spring、Zookeeper、TKmybatis、Kafka、Zuul、Dubbo、Redis等
 * 设计技术:
   - 1、基于dubbo实现服务之间的通讯;
   - 2、基于Kafka实现系统解耦、流量削峰;
-  - 3、基于Redis、mysql实现企业微信客户群双写一致性;
+  - 3、基于Redis、mysql实现企客户数据双写一致性;
   - 4、基于redis实现接口限流操作;
 * 贡献：
   主导微灵平台开发，从需求分析、技术选型、开发到部署上线。上线后优化数据报表，给运营提供便捷方式获取他们所需的数据。还负责研究新的技术栈，并把新的技术栈融入项目；
