--- a/gc-document/面试经历.md
+++ b/gc-document/面试经历.md
@@ -124,5 +124,22 @@
 * 谈谈dubbo的架构
 * 谈谈mybatis是如何与spring结合一起用的，实现了哪些类
 
+## 20220708 -- 壹豆网络
+* 事务不生效有哪些情况
+* mysql性能优化
+* mysql 执行explain 出现using filesort现象，什么原因，怎么处理
+* mysql 两列索引同时查找，它的查询过程是怎么样的。（哪个索引区分度大，筛选更快就使用哪个）
+* mysql 的内连接查询跟左连接查询，他们索引是怎么执行的
+* sych 与 lock的区别
+* redis主从同步过程
+* 类加载过程 
+* Stringpool 加载
+* int a =1 加载过程是怎么样的
+* jvm 经常15次gc后，为什么还会存在老年代，代码是怎么体现的
+* get 与 post区别
+* dubbo是基于长链接方式还是基于短链接方式
+* feign调用速度快还是dubbo调用速度快
+* feign是基于长链接还是短链接调用
+* springcloud与dubbo的优缺点
 
 
