--- a/gc-document/面试经历.md
+++ b/gc-document/面试经历.md
@@ -176,4 +176,14 @@
 * 分布式事务的实现
 * mysql事务的处理
 * 事务失效的处理
-* 
+
+## 20220718 -- 映客（服务器开发）
+* 谈谈线程锁，有哪些
+* Sysc 和 lock 有什么区别，底层原理是怎么样的
+* 线程还有哪些锁
+* 你知识缓存一致性么
+* 你知道mysql锁么
+* mysql查询过程中索引有加锁么
+* 行级锁下有哪些锁
+* select * from user_table where age =10 和 select * from user_table where age >10 查询过程，age 加了索引，id为主键
+* mysql 树有哪些
