--- a/gc-springcloud/分布式事务原理.md
+++ b/gc-springcloud/分布式事务原理.md
@@ -1,2 +1,26 @@
+## 分布式事务
+谈到分布式事务，首先要说的就是 2PC（two phase commit）方案，如下图所示：
+
+![](./images/2pc.png)
+
+2PC 把事务的执行分为两个阶段，第一个阶段即 prepare 阶段，这个阶段实际上就是投票阶段，协调者向参与者确认是否可以共同提交，再得到全部参与者的所有回答后，协调者向所有的参与者发布共同提交或者共同回滚的指令，用以保证事务达到一致性。
+2PC 是几乎所有分布式事务算法的基础，后续的分布式事务算法几乎都由此改进而来。
+
+## TCC
+TCC(Try-Confirm-Concel) 模型是一种补偿性事务，主要分为 Try：检查、保留资源，Confirm：执行事务，Concel：释放资源三个阶段，如下图所示：
+
+![](./images/tcc.png)
+
+其中，活动管理器记录了全局事务的推进状态以及各子事务的执行状态，负责推进各个子事务共同进行提交或者回滚。同时负责在子事务处理超时后不停重试，重试不成功后转手工处理，用以保证事务的最终一致性。
+
+**原理** :每个子节点，要实现 TCC 接口，才能被管理。
+* 优点：不依赖 local transaction，可以管理非关系数据库库的服务
+* 缺点：TCC 模式多增加了一个状态，导致在业务开发过程中，复杂度上升，而且协调器与子事务的通信过程增加，状态轮转处理也更为复杂。而且，很多业务是无法补偿的，例如银行卡充值。
+
+
+
+
+https://juejin.cn/post/6844904024492228616
+
 https://kb.cnblogs.com/page/643107/
 
