--- a/gc-java/gc-java-thread/线程池知识.md
+++ b/gc-java/gc-java-thread/线程池知识.md
@@ -14,11 +14,11 @@
 ### 线程池核心设计
 * Executor 框架
 
-![](./images/executor关系类图.png)
+![](pool/线程池executor关系类图.png)
 
 * Executor 框架的使用示意图:
 
-![](./images/Executor框架的使用示意图.png)
+![](pool/线程池Executor框架的使用示意图.png)
 
 * 1）主线程首先要创建实现 Runnable 或者 Callable 接口的任务对象。
 * 2）把创建完成的实现 Runnable/Callable接口的 对象直接交给 ExecutorService 执行: ExecutorService.execute（Runnable command））或者也可以把 Runnable 对象或Callable 对象提交给 ExecutorService 执行（ExecutorService.submit（Runnable task）或 ExecutorService.submit（Callable <T> task））。
@@ -88,11 +88,11 @@
 
 2) 线程池图
 
- ![](./images/线程池各个参数之间的关系.png)
+ ![](pool/线程池各个参数之间的关系.png)
 
 线程池执行原理图：
 
-![](./images/图解线程池实现原理.png)
+![](pool/图解线程池实现原理.png)
 
 【从图中可以看出，当提交一个任务到线程池时，线程池处理流程如下】：
 * 1）、首先检测线程池运行状态，如果不是RUNNING，则直接拒绝，线程池要保证在 RUNNING的状态下执行任务。
@@ -113,7 +113,7 @@
 
 ThreadPoolExecutor 执行 execute() 方法的示意图：
 
-![](./images/execute方法示意图.png)
+![](pool/线程池execute方法示意图.png)
 
 **execute() vs submit()区别：**
 
