--- a/gc-java/gc-java-thread/线程池知识.md
+++ b/gc-java/gc-java-thread/线程池知识.md
@@ -33,7 +33,7 @@
 备注： 工具类Executors可以实现Runnable对象和Callable对象之间的相互转换。（Executors.callable（Runnable task）或Executors.callable（Runnable task，Object resule））。
 
 ### 线程池类型
-0) 类型
+1) 类型
 * FixedThreadPool 被称为可重用固定线程数的线程池。该线程池中的线程数量始终不变。当有一个新的任务提交时，线程池中若有空闲线程，则立即执行。若没有，则新的任务会被暂存在一个任务队列中，待有线程空闲时，便处理在任务队列中的任务。。
 * SingleThreadExecutor 是只有一个线程的线程池。若多余一个任务被提交到该线程池，任务会被保存在一个任务队列中，待线程空闲，按先入先出的顺序执行队列中的任务。
 * CachedThreadPool 是一个会根据需要创建新线程的线程池。线程池的线程数量不确定，但若有空闲线程可以复用，则会优先使用可复用的线程。若所有线程均在工作，又有新的任务提交，则会创建新的线程处理任务。所有线程在当前任务执行完毕后，将返回线程池进行复用。
@@ -45,7 +45,7 @@
 
     FixedThreadPool 和 SingleThreadExecutor ： 允许请求的队列长度为 Integer.MAX_VALUE ，可能堆积大量的请求，从而导致 OOM。
     CachedThreadPool 和 ScheduledThreadPool ： 允许创建的线程数量为 Integer.MAX_VALUE ，可能会创建大量线程，从而导致 OOM。
-1) 线程池创建
+2) 线程池创建
 
           /**
            * 用给定的初始参数创建一个新的ThreadPoolExecutor。
@@ -76,17 +76,19 @@
 
 重要的参数：
 
-        
-        corePoolSize : 核心线程数线程数定义了最小可以同时运行的线程数量。
-        maximumPoolSize : 当队列中存放的任务达到队列容量的时候，当前可以同时运行的线程数量变为最大线程数。
-        workQueue: 当新任务来的时候会先判断当前运行的线程数量是否达到核心线程数，如果达到的话，新任务就会被存放在队列中。
-       
-        keepAliveTime:当线程池中的线程数量大于 corePoolSize 的时候，如果这时没有新的任务提交，核心线程外的线程不会立即销毁，而是会等待，直到等待的时间超过了 keepAliveTime才会被回收销毁；
-        unit : keepAliveTime 参数的时间单位。
-        threadFactory :创建线程的工程类。可以通过指定线程工厂为每个创建出来的线程设置更有意义的名字，如果出现并发问题，也方便查找问题原因。
-        handler :饱和策略。关于饱和策略下面单独介绍一下。
+1. corePoolSize：表示核心线程池的大小。当提交一个任务时，如果当前核心线程池的线程个数没有达到corePoolSize，则会创建新的线程来执行所提交的任务，**即使当前核心线程池有空闲的线程**。如果当前核心线程池的线程个数已经达到了corePoolSize，则不再重新创建线程。如果调用了`prestartCoreThread()`或者 `prestartAllCoreThreads()`，线程池创建的时候所有的核心线程都会被创建并且启动。
+2. maximumPoolSize：表示线程池能创建线程的最大个数。如果当阻塞队列已满时，并且当前线程池线程个数没有超过maximumPoolSize的话，就会创建新的线程来执行任务。
+3. keepAliveTime：空闲线程存活时间。如果当前线程池的线程个数已经超过了corePoolSize，并且线程空闲时间超过了keepAliveTime的话，就会将这些空闲线程销毁，这样可以尽可能降低系统资源消耗。
+4. unit：时间单位。为keepAliveTime指定时间单位。
+5. workQueue：阻塞队列。用于保存任务的阻塞队列，关于阻塞队列[可以看这篇文章](https://juejin.im/post/5aeebd02518825672f19c546) 。可以使用**ArrayBlockingQueue, LinkedBlockingQueue, SynchronousQueue, PriorityBlockingQueue**。
+6. threadFactory：创建线程的工程类。可以通过指定线程工厂为每个创建出来的线程设置更有意义的名字，如果出现并发问题，也方便查找问题原因。
+7. handler：饱和策略。当线程池的阻塞队列已满和指定的线程都已经开启，说明当前线程池已经处于饱和状态了，那么就需要采用一种策略来处理这种情况。采用的策略有这几种：
+   1. AbortPolicy： 直接拒绝所提交的任务，并抛出**RejectedExecutionException**异常；
+   2. CallerRunsPolicy：调用执行自己的线程运行任务，也就是直接在调用execute方法的线程中运行(run)被拒绝的任务，如果执行程序已关闭，则会丢弃该任务。因此这种策略会降低对于新任务提交速度，影响程序的整体性能。如果您的应用程序可以承受此延迟并且你要求任何一个任务请求都要被执行的话，你可以选择这个策略。
+   3. DiscardPolicy：不处理直接丢弃掉任务；
+   4. DiscardOldestPolicy：丢弃掉阻塞队列中存放时间最久的任务，执行当前任务
 
-2) 线程池图
+3) 线程池图
 
  ![](pool/线程池各个参数之间的关系.png)
 
@@ -100,20 +102,21 @@
 * 3）、线程池判断工作队列是否已满。如果工作队列没满，就将任务存储在队列中。如果队列满了，则进入步骤4。
 * 4）、线程池判断线程池中的线程数是否已达上限，没有就创建新线程执行任务，如果已满则根据饱和策略处理此任务。默认的处理方式是直接抛异常。
 
-3) 饱和策略
-
-如果当前同时运行的线程数量达到最大线程数量并且队列也已经被放满了任务时，ThreadPoolTaskExecutor 定义一些策略:
-
-* ThreadPoolExecutor.AbortPolicy ：抛出 RejectedExecutionException来拒绝新任务的处理。
-* ThreadPoolExecutor.CallerRunsPolicy ：调用执行自己的线程运行任务，也就是直接在调用execute方法的线程中运行(run)被拒绝的任务，如果执行程序已关闭，则会丢弃该任务。因此这种策略会降低对于新任务提交速度，影响程序的整体性能。如果您的应用程序可以承受此延迟并且你要求任何一个任务请求都要被执行的话，你可以选择这个策略。
-* ThreadPoolExecutor.DiscardPolicy ：不处理新任务，直接丢弃掉。
-* ThreadPoolExecutor.DiscardOldestPolicy ： 此策略将丢弃最早的未处理的任务请求。
-
 4) 执行方法execute() 和 submit()
 
 ThreadPoolExecutor 执行 execute() 方法的示意图：
 
 ![](pool/线程池execute方法示意图.png)
+
+execute方法执行逻辑有这样几种情况：
+
+1. 如果当前运行的线程少于corePoolSize，则会创建新的线程来执行新的任务；
+2. 如果运行的线程个数等于或者大于corePoolSize，则会将提交的任务存放到阻塞队列workQueue中；
+3. 如果当前workQueue队列已满的话，则会创建新的线程来执行任务；
+4. 如果线程个数已经超过了maximumPoolSize，则会使用饱和策略RejectedExecutionHandler来进行处理。
+
+需要注意的是，线程池的设计思想就是使用了**核心线程池corePoolSize，阻塞队列workQueue和线程池maximumPoolSize**，这样的缓存策略来处理任务，实际上这样的设计思想在需要框架中都会使用。
+
 
 **execute() vs submit()区别：**
 
