--- a/gc-java/gc-java-thread/线程锁机制2.md
+++ b/gc-java/gc-java-thread/线程锁机制2.md
@@ -1,5 +1,5 @@
 ## 线程锁
-![](./images/Java线程锁.jpg)
+![](pool/Java线程锁.jpg)
 
 ## 乐观锁和悲观锁
 * 1、悲观锁
@@ -85,7 +85,7 @@ CAS算法涉及到三个操作数：
 * 3、线程A先会对比工作内存当中的数据和主内存当中的数据是否一致，如果一致（V==E）则进行更新，不一致则刷新数据，重新循环判断
 * 4、这时更新完毕后，线程B也要进行数据更新，主内存数据和工作内存数据做对比，如果一致则进行更新，不一致则将主内存数据重新更新到工作内存，然后循环再次对比两个内存中的数据直到一致为止。
 
-![](./images/cas算法.jpg)
+![](happens-before/cas算法.jpg)
 
 3、缺点：
 
@@ -106,7 +106,7 @@ CAS 只对单个共享变量有效，当操作涉及跨多个共享变量时 CAS
 
 AQS 是一个集同步状态管理、线程阻塞、线程释放及队列管理功能与一身的同步框架。其核心思想是当多个线程竞争资源时会将未成功竞争到资源的线程构造为 Node 节点放置到一个双向 FIFO 队列中。被放入到该队列中的线程会保持阻塞直至被前驱节点唤醒。
 
-![](./images/aqs队列.jpg)
+![](aqs/aqs队列.jpg)
 
 ## 重入锁ReentrantLock
 1、概念
