--- a/gc-java/gc-java-thread/线程池知识.md
+++ b/gc-java/gc-java-thread/线程池知识.md
@@ -277,6 +277,106 @@ execute方法执行逻辑有这样几种情况：
                 return workerStarted;
             }
 
+7) 关于工作线程的实现逻辑
+
+   执行 addWorker(Runnable firstTask, boolean core) 方法。调用  w = new Worker(firstTask); 时会触发以下逻辑：
+
+
+      第一步：触发 Worker 线程的中的run（）方法
+      public void run() {
+         runWorker(this);
+      }
+
+      第二步： runWorker(this);
+       final void runWorker(Worker w) {
+        Thread wt = Thread.currentThread();
+        Runnable task = w.firstTask;//得到需要执行的任务
+        w.firstTask = null;//置空
+        w.unlock(); // allow interrupts
+        boolean completedAbruptly = true;
+          /*
+          * 我们可能从一个初始任务开始，在这种情况下我们不需要获取第一个任务。否则，只要 pool 正在运行，我们就从 getTask 获取任务。
+          * */
+        try {
+            //如果任务不为空或着通过getTask从队列中去任务也不为空
+            while (task != null || (task = getTask()) != null) {
+                w.lock();//加锁，防止线程被中断，中断则抛出异常
+                // If pool is stopping, ensure thread is interrupted;
+                // if not, ensure thread is not interrupted.  This
+                // requires a recheck in second case to deal with
+                // shutdownNow race while clearing interrupt
+                //判断线程是否需要中断
+                if ((runStateAtLeast(ctl.get(), STOP) ||
+                     (Thread.interrupted() &&
+                      runStateAtLeast(ctl.get(), STOP))) &&
+                    !wt.isInterrupted())
+                    wt.interrupt();
+                try {
+                    beforeExecute(wt, task);
+                    try {
+                        task.run();//开始执行任务
+                        afterExecute(task, null);
+                    } catch (Throwable ex) {
+                        afterExecute(task, ex);
+                        throw ex;
+                    }
+                } finally {
+                    task = null;
+                    w.completedTasks++;
+                    w.unlock();
+                }
+            }
+            completedAbruptly = false;
+        } finally {
+            processWorkerExit(w, completedAbruptly);
+        }
+    }
+
+     第三步：任务队列处理
+     private Runnable getTask() {
+        boolean timedOut = false; // Did the last poll() time out?
+
+        for (;;) {
+            int c = ctl.get();
+
+            // Check if queue empty only if necessary.
+            //检查线程池的状态，如果已经是STOP及以上的状态，或者已经SHUTDOWN，队列也是空的时候，直接return null，并将Worker数量-1
+            if (runStateAtLeast(c, SHUTDOWN)
+                && (runStateAtLeast(c, STOP) || workQueue.isEmpty())) {
+                decrementWorkerCount();
+                return null;
+            }
+
+            int wc = workerCountOf(c);
+
+            // Are workers subject to culling?
+            // 注意这里的allowCoreThreadTimeOut参数，字面意思是否允许核心线程超时，即如果我们设置为false，那么只有当线程数wc大于corePoolSize的时候才会超时
+            //更直接的意思就是，如果设置allowCoreThreadTimeOut为false，那么线程池在达到corePoolSize个工作线程之前，不会让闲置的工作线程退出
+            boolean timed = allowCoreThreadTimeOut || wc > corePoolSize;
+
+            if ((wc > maximumPoolSize || (timed && timedOut))
+                && (wc > 1 || workQueue.isEmpty())) {
+                if (compareAndDecrementWorkerCount(c))
+                    return null;
+                continue;
+            }
+ 
+            //从队列中取任务，根据timed选择是有时间期限的等待还是无时间期限的等待
+            try {
+                Runnable r = timed ?
+                    workQueue.poll(keepAliveTime, TimeUnit.NANOSECONDS) :
+                    workQueue.take();// BlockingQueue<Runnable> workQueue，take()本身具有阻塞作用。在这里表示若是核心线程，队列为空的话，核心线程处于阻塞状态
+                if (r != null)
+                    return r;
+                timedOut = true;
+            } catch (InterruptedException retry) {
+                timedOut = false;
+            }
+        }
+    }
+线程池的线程是如何做到复用的：
+线程池中的线程在循环中尝试取任务执行，这一步会被阻塞，如果设置了allowCoreThreadTimeOut为true，则线程池中的所有线程都会在keepAliveTime时间超时后还未取到任务而退出。或者线程池已经STOP，那么所有线程都会被中断，然后退出。
+
 ### 线程池参数配置
 要想合理的配置线程池，就必须首先分析任务特性，可以从以下几个角度来进行分析：
 
