--- a/gc-java/技术总结.md
+++ b/gc-java/技术总结.md
@@ -1,2 +1,7 @@
 ## gc-java-thread
 有些笔记摘抄于：https://github.com/CL0610/Java-concurrency
+
+## 笔记来源
+https://github.com/CyC2018/CS-Notes.git
+
+https://github.com/CL0610/Interview-Notebook.git
