增加gc-bom，参考项目，用于版本管理

--- a/gc-oauth2/笔记.md
+++ b/gc-oauth2/笔记.md
@@ -5,3 +5,7 @@ http://localhost:9090/oauth2/authorize?response_type=code&client_id=demo-client&
 获取token的请求：
 
 http://localhost:9090/oauth2/token
+
+项目对应及操作的示例文章：
+
+https://blog.csdn.net/baidu_28068985/article/details/128431612?spm=1001.2014.3001.5502
