--- a/gc-oauth2/笔记.md
+++ b/gc-oauth2/笔记.md
@@ -1,3 +1,5 @@
+## 接口操作
+
 授权获取code请求：
 
 http://localhost:9090/oauth2/authorize?response_type=code&client_id=demo-client&scope=message.read&redirect_uri=http://127.0.0.1:8080/authorized
@@ -9,3 +11,59 @@ http://localhost:9090/oauth2/token
 项目对应及操作的示例文章：
 
 https://blog.csdn.net/baidu_28068985/article/details/128431612?spm=1001.2014.3001.5502
+
+## 关于 UserDetailsService 说明
+* 关于内存存储
+
+
+    @Bean
+	UserDetailsService users() {
+		UserDetails user = User.withDefaultPasswordEncoder()
+				.username("admin")
+				.password("123456")
+				.roles("USER")
+				.build();
+		return new InMemoryUserDetailsManager(user);
+	}
+
+ 以上默认解码器，配置文件中不需要注入解码器。客户端的密钥也不需要加密（.clientSecret("{noop}secret")）
+ 
+* 关于调用第三方接口
+
+
+    @Bean
+    public PasswordEncoder passwordEncoder(){
+        return new BCryptPasswordEncoder();
+    }
+
+实现第三方的接口：
+
+public class UserDetailsServiceImpl implements UserDetailsService {}
+
+实现方式查看 UserDetailsServiceImpl 类
+
+在过滤链中注入，并配置：
+
+    @Autowired
+	private UserDetailsService userDetailsService;
+
+
+
+    	@Bean
+	@Order(2)
+	public SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http)
+		throws Exception {
+		http
+			.authorizeHttpRequests((authorize) -> authorize
+				.anyRequest().authenticated()
+			)
+			// Form login handles the redirect to the login page from the
+			// authorization server filter chain
+			.formLogin(Customizer.withDefaults())
+		// 若是使用第三方，则注入即可
+				.userDetailsService(userDetailsService)
+		;
+
+		return http.build();
+	}
+
